fixed footer & nav spacing on mobile

--- a/css/queries2.css
+++ b/css/queries2.css
@@ -35,6 +35,10 @@
     font-size: 3.0rem;
   }
 
+  .step-number {
+    font-size: 7.4rem;
+  }
+
   /* .grid {
     column-gap: 2.4rem;
     row-gap: 6.4rem;
@@ -89,6 +93,10 @@
 
   .copyright-mobile {
     display: block;
+  }
+
+  .footer-logo {
+    margin-bottom: 1.2rem;
   }
 
   .section-testimonials {
@@ -155,8 +163,12 @@
     flex-direction: column;
     /* align-items: end; */
     /* text-align: center; */
-    gap: 4.8rem;
+
+    /* gap doesn't work on Safari */
+    /* gap: 4.8rem; */
   }
+
+
 
   .main-nav-link:link,
   .main-nav-link:visited {
@@ -165,6 +177,7 @@
 
   .main-nav-list li:not(:last-child) {
     margin-right: 0;
+    margin-bottom: 4.8rem;
   }
 
 }
@@ -199,6 +212,14 @@
     gap: 1.2rem;
   }
 
+}
+
+/* <=670px */
+@media (max-width: 41.875em){
+  /* make maltese image bigger */
+  /* make "our services" picture smaller */
+
+  /* grid */
 }
 
 
