--- a/css/style2.css
+++ b/css/style2.css
@@ -565,4 +565,6 @@ h1 span {
   font-size: 1.4rem;
   line-height: 1.6;
   color: #767676;
+
+  text-align: center;
 }
